fixing bg jump

--- a/css/vision-namd.css
+++ b/css/vision-namd.css
@@ -19,7 +19,7 @@
 
 .bgimg {
     position: relative;
-    top: -0.5%;
+    top: -0.1%;
     width: 100.5%;
     height: 100%;
 }
